syntax = "proto3";

option go_package = "github.com/hyperledger/fabric/protos/common";
option java_package = "org.hyperledger.fabric.protos.common";

package protos;

enum StatusCode {
    SUCCESS = 0;
    FAILED = 1;
}

message SubmitTxResponse {
    StatusCode status = 1;
}

message FetchTxsRequest {
    string sender = 1;
    int32 tx_num = 2;
}

message FetchTxsResponse {
    int32 tx_num = 1;
    bool is_empty = 2;
}

message EndorsedTransaction {
    bytes tx = 1;
}

service Mempool {
    rpc SubmitTransaction (EndorsedTransaction) returns (SubmitTxResponse) {
    }
    rpc FetchTransactions (FetchTxsRequest) returns (FetchTxsResponse) {
    }
}
